# coding_challenge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  setup.cfg
src/: entrypoint.sh
src/tests/: conftest.py
src/tests/fixtures/: api_client_fixtures.py  todo_item_fixtures.py  user_fixtures.py
src/tests/functional/todos/: test_api.py
src/tests/system/accounts/: test_authentication.py  test_models.py
src/todo_coding_challenge/: manage.py
src/todo_coding_challenge/accounts/: apps.py  models.py  serializers.py  urls.py  views.py
src/todo_coding_challenge/main/: asgi.py  settings.py  urls.py  wsgi.py
src/todo_coding_challenge/todos/: apps.py  models.py  serializers.py  urls.py  views.py
src/todo_coding_challenge/todos/migrations/: 0001_initial.py  0002_alter_todoitem_description.py
todo-app/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
todo-app/src/: App.tsx  types.tsx
todo-app/src/actions/: handleAuthentication.tsx  handleResponse.tsx  handleTodos.tsx  handleToken.tsx
todo-app/src/components/: ProtectedRoute.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
todo-app/src/components/ui/: input.tsx
todo-app/src/pages/: Home.tsx  Signin.tsx
